[project]
name = "agentic-ai-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain-openai = ">=0.3.27,<0.4.0"
langchain-core = ">=0.3.68,<0.4.0"
python-dotenv = ">=1.1.1,<2.0.0"
streamlit = ">=1.46.1,<2.0.0"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
sse-starlette = ">=2.4.1,<3.0.0"
bs4 = ">=0.0.2,<0.0.3"
pypdf = ">=5.7.0,<6.0.0"
chromadb = ">=1.0.15,<2.0.0"
faiss-cpu = ">=1.11.0,<2.0.0"
groq = ">=0.29.0,<0.30.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
langchain-groq = ">=0.3.5,<0.4.0"
wikipedia = ">=1.4.0,<2.0.0"
arxiv = ">=2.2.0,<3.0.0"
sentence-transformers = ">=5.0.0,<6.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
langchain-community = ">=0.3.27,<0.4.0"
ollama = ">=0.5.1,<0.6.0"
langserve = ">=0.3.1,<0.4.0"
langchain-ollama = ">=0.3.3,<0.4.0"
ipykernel = ">=6.29.5,<7.0.0"
langchain = "^0.3.26"
langchain-text-splitters = "^0.3.8"
protobuf = "3.20.3"
langchainhub = "^0.1.21"
langgraph = "^0.5.2"
langsmith = "^0.4.4"
langchain-tavily = "^0.2.7"
langgraph-supervisor = "^0.0.27"
langgraph-sdk = "^0.1.72"
grandalf = "^0.8"
langgraph-checkpoint-sqlite = "^2.0.11"
langchain-experimental = "^0.3.4"
matplotlib = "^3.10.5"
langchain-aws = "^0.2.31"
opencv-python = "<4.12"
opencv-python-headless = "<4.12"
scikit-image = "^0.25.2"
llama-index-core = "^0.14.3"
llama-index-llms-openai = "^0.6.1"
llama-index-embeddings-huggingface = "^0.6.1"
llama-index-embeddings-openai = "^0.5.1"


